<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <TextView
        android:id="@+id/text"
        android:text="@string/point_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_margin="@dimen/margin_small"/>

    <TextView
        android:id="@+id/temp"
        android:text="+28°"
        android:textSize="30sp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/text"
        app:layout_constraintStart_toStartOf="@id/text"
        android:layout_marginTop="@dimen/margin_small"/>

    <ImageView
        android:id="@+id/image"
        android:layout_width="@dimen/image_w_size"
        android:layout_height="@dimen/image_h_size"
        app:layout_constraintTop_toBottomOf="@id/text"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="@dimen/margin_small"/>

    <TextView
        android:id="@+id/temp_min"
        android:text="+20°"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/temp"
        app:layout_constraintStart_toStartOf="@id/temp"
        app:layout_constraintEnd_toStartOf="@id/temp_max"
        android:layout_marginTop="@dimen/margin_small"/>

    <TextView
        android:id="@+id/temp_max"
        android:text="+32°"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="@id/temp_min"
        app:layout_constraintStart_toEndOf="@id/temp_min"
        app:layout_constraintEnd_toEndOf="@id/temp"/>

    <TextView
        android:id="@+id/description"
        android:text="@string/description"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/temp_min"
        app:layout_constraintStart_toStartOf="@id/temp"
        android:layout_marginTop="@dimen/margin_small"/>

    <TextView
        android:id="@+id/humidity"
        android:text="@string/humidity"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/image"
        app:layout_constraintStart_toStartOf="@id/text"
        android:layout_marginTop="@dimen/margin_small" />

    <TextView
        android:id="@+id/pressure"
        android:text="@string/pressure"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/image"
        app:layout_constraintStart_toEndOf="@id/humidity"
        android:layout_marginTop="@dimen/margin_small"
        android:layout_marginStart="@dimen/margin_small"/>

    <TextView
        android:id="@+id/wind"
        android:text="@string/wind"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/image"
        app:layout_constraintStart_toEndOf="@id/pressure"
        android:layout_marginTop="@dimen/margin_small"
        android:layout_marginStart="@dimen/margin_small"/>




</androidx.constraintlayout.widget.ConstraintLayout>